!1007 raftlog store * fix: fix HasRange issue(ZDP-48197) * fix: fix compile issue(ZDP-48197) * Merge remote-tracking branch 'kwdb/master' into master_raft_store_snappy * remove unused log * Merge branch 'master' of https://gitee.com/kwdb/kwdb into master_raft_… * Merge branch 'master' of https://gitee.com/kwdb/kwdb into master_raft_… * fix: fix lint(ZDP-48197) * Merge branch 'master' of gitee.com:kwdb/kwdb into master_raft_store_snappy * fix: remove and fix logs * Merge branch 'master_raft_store_snappy-perf' into master_raft_store_snappy * fix: fix inconsistent state for removed ranges * fix: unable raftlog store(ZDP-48197) * Merge remote-tracking branch 'exec/master_raft_store_snappy' into mast… * fix: update ts applied index if different from truncate state * fix: update truncate state if different from raft log store * fix: fix cgo memory gc issue in raft log store * fix: enable raftlog store(ZDP-48197) * Merge remote-tracking branch 'exec/master_raft_store_snappy-fallocate'… * fix: fix ts replica init issues with stale truncate state or create af… * debug: add log for debug create replica * fix: fix compact time(ZDP-48197) * Merge remote-tracking branch 'kwdb/master' into master_raft_store_snap… * debug: add log for c slice * debug: add log for gc error * fix: fix memory leak in ts_raftlog_engine.go * debug: add log for test * simplify log when get ts last index * Merge branch 'master' of https://gitee.com/kwdb/kwdb into master_raft_… * fix: fix compactput(ZDP-48197) * fix: fix truncate issue(ZDP-48197) * feat: always clear range data in raft store when remove replica * feat: use truncate api of raft store to truncate raft log * fix: add replica for learner replica when raft log combine wal * fix: fix init issue(ZDP-48197) * fix:(ZDP-48775)cpplint modify * Merge remote-tracking branch 'kwdb/master' into master_raft_store_snappy * fix: fix replica_init_test.go(ZDP-48197) * fix: fix truncate issue(ZDP-48197) * Merge branch 'master' of gitee.com:kwdb/kwdb into mast

--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -317,6 +317,7 @@ set(TS_INCLUDE
         statistic/include
         ${SNAPPY_INCLUDE}
         brpc/include
+        ${SNAPPY_INCLUDE}
         )
 if (NOT KWBASE_OSS)
     list(APPEND TS_INCLUDE icl/autonomy/include)
