!1188 feat:安装部署优化 * bug 修复 * 增加脚本权限 * 容器操作取消交互 * 安装部署优化，libkwdbts增加编译选项，打包依赖调整

--- a/kaiwudb_install/deploy.cfg
+++ b/kaiwudb_install/deploy.cfg
@@ -19,7 +19,9 @@ node_addr=127.0.0.1
 # section cluster is optional
 [cluster]
 # remote node addr,split by ','
-node_addr=127.0.0.2,127.0.0.3
+node_addr=127.0.0.2
 # ssh info
 ssh_port=22
-ssh_user=admin
+ssh_user=songxing
+[additional]
+IPs=127.0.0.3,127.0.0.4
